# HawkAPI

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  build_mypyc.py  hatch_build.py  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  docs.yml  publish.yml  security.yml  wheels.yml
benchmarks/: bench_cold_start.py  bench_concurrent.py  bench_memory.py  bench_request_response.py  bench_routing.py  bench_serialization.py  bench_streaming.py  bench_vs_fastapi.py  bench_websocket.py
benchmarks/competitive/: README.md  RESULTS.md  generate_report.py  run_all.sh  runner.py
benchmarks/e2e/: fastapi_app.py  hawkapi_app.py  run_benchmarks.py
docs/: CNAME  index.md
docs/api/: index.md
docs/audits/: 2026-04-18-dx-vs-fastapi.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: benchmarks.md  bulkhead.md  client-codegen.md  configuration.md  dependency-injection.md  deployment.md  doctor.md  feature-flags.md  free-threaded.md  graphql.md  grpc.md  http2.md  middleware.md  migration-from-fastapi.md  observability.md  performance.md  permissions.md  plugins.md  responses.md  routing.md  security.md  static-files.md  testing.md  versioning.md  websockets.md
docs/plans/: 2026-03-04-dx-parity-design.md  2026-03-04-dx-parity-implementation.md  2026-03-04-level2-production-design.md  2026-03-04-level2-production-implementation.md  2026-04-18-competitive-benchmarks-ci-design.md  2026-04-18-dx-audit-design.md  2026-04-18-dx-gap2-route-dependencies-design.md  2026-04-18-dx-gap3-response-model-exclude-design.md  2026-04-18-dx-gap4-oauth2-scopes-design.md  2026-04-18-dx-gap5-status-design.md  2026-04-18-tier1-freethreaded-design.md  2026-04-18-tier1-freethreaded-plan.md  2026-04-18-tier2-bulkhead-design.md  2026-04-18-tier2-bulkhead-plan.md  2026-04-18-tier2-feature-flags-design.md  2026-04-18-tier2-graphql-design.md  2026-04-18-tier3-openapi-codegen-design.md  2026-04-18-tier3-typed-routes-design.md  2026-04-19-tier2-grpc-design.md  2026-04-19-wave2-doctor-design.md
docs/security/: code-review-2026-05-16.md  owasp-api-top10-2023.md  threat-model.md
examples/: hello_world.py
src/hawkapi/: __init__.py  _constants.py  _docs.py  _health.py  _threading.py  _types.py  app.py  background.py  cli.py  exceptions.py  pagination.py  plugins.py  staticfiles.py  status.py
templates/: Dockerfile  docker-compose.yml
templates/github-actions/: api-diff.yml
templates/sdk-generator/: python.md  typescript.md
tests/: conftest.py
tests/integration/: test_app.py  test_di_integration.py  test_production_features.py  test_subapp_docs.py  test_test_client.py
tests/perf/: .benchmark_baseline.json  __init__.py  baseline.json  conftest.py  test_bulkhead_perf.py  test_memory_budget.py  test_perf_regression.py
tests/unit/: test_adaptive_concurrency.py  test_api_diff.py  test_app_coverage.py  test_audit_coverage.py  test_auto_response_model.py  test_background.py  test_body_limits.py  test_breaking_changes.py  test_build_mypyc.py  test_bulkhead.py  (+94 more)
(+175 files in other folders)
