[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hawkapi"
version = "0.1.2"
description = "High-performance Python web framework — faster alternative to FastAPI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "HawkAPI Contributors", email = "hawkapi@users.noreply.github.com" },
]
keywords = ["web", "framework", "async", "api", "rest", "asgi", "msgspec"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "msgspec>=0.19.0",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
granian = ["granian>=1.0"]
uvloop = ["uvloop>=0.21"]
uvicorn = ["uvicorn[standard]>=0.30"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
metrics = ["prometheus-client>=0.20"]
logging = ["structlog>=24.0"]
redis = ["redis>=5.0"]
all = ["hawkapi[pydantic,granian,uvloop,uvicorn,otel,metrics,logging,redis]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-memray>=1.7; sys_platform != 'win32'",
    "pytest-benchmark>=4.0",
    "coverage>=7.0",
    "ruff>=0.8",
    "pyright>=1.1",
    "libcst>=1.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.26",
]
bench = [
    "granian>=1.0",
    "fastapi>=0.115",
    "litestar>=2.0",
    "blacksheep>=2.0",
    "starlette>=0.40",
    "sanic>=24.6",
    "pydantic>=2.0",
]
build = [
    "mypy>=1.13",
]

[project.scripts]
hawkapi = "hawkapi.cli:main"

[project.urls]
Homepage = "https://github.com/ashimov/HawkAPI"
Documentation = "https://hawkapi.ashimov.com"
Repository = "https://github.com/ashimov/HawkAPI"

[tool.hatch.build.targets.wheel]
packages = ["src/hawkapi"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:cannot collect test class:pytest.PytestCollectionWarning",
]
markers = [
    "memory: memory budget tests (require pytest-memray, run via tests/perf/)",
    "perf: performance regression tests (run via tests/perf/)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.coverage.run]
source = ["hawkapi"]
omit = ["*/testing/plugin.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
